init source code

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.platform</groupId>
-	<artifactId>novel-backend-service</artifactId>
-	<name>novel</name>
-	<description>Novel Project</description>
+	<artifactId>logging-backend-service</artifactId>
+	<name>logging</name>
+	<description>Logging service</description>
 	<packaging>jar</packaging>
 	<version>1.0</version>
 	<properties>
