--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: novel
+    name: logging
   main:
     allow-bean-definition-overriding: true
   jpa:
@@ -30,9 +30,9 @@ spring:
         uri: mongodb://mongo:mongo123@localhost:27017/inquiryDB?retryWrites=true&w=majority&directConnection=true&authMechanism=SCRAM-SHA-1&authSource=admin
 ###swagger
 application:
-  description: Novel
+  description: Logging
   version: 1.0
-build.date: 2023-07-02
+build.date: 2023-09-23
 
 ###Timeout api
 rest:
